# EstruturasDados

./: .gitignore  CMakeLists.txt
.github/classroom/: autograding.json
estruturas/: CMakeLists.txt
estruturas/include/: config.h  hash.h  manager.h  metrics.h  node.h
estruturas/src/: hash.cpp  list.cpp  manager.cpp
sempalavras/: CMakeLists.txt
sempalavras/include/: config.h  list.h  manager.h  node.h
sempalavras/src/: list.cpp  splay.cpp
tests/: CMakeLists.txt
